# ltsmin_delta

./: .gitmodules  configure.ac
lib/: asnprintf.lo  fprintf.lo  fseterr.lo  libgnu.la  math.lo  printf-args.lo  printf-frexp.lo  printf-frexpl.lo  printf-parse.lo  progname.lo  sig-handler.lo  signal.h  stdio.h  stdlib.h  strerror_r.lo  string.h  time.h  unistd.h  unistd.lo  vasnprintf.lo  xsize.lo
lib/.deps/: asnprintf.Plo  fprintf.Plo  fseterr.Plo  math.Plo  printf-args.Plo  printf-frexp.Plo  printf-frexpl.Plo  printf-parse.Plo  progname.Plo  sig-handler.Plo  strerror_r.Plo  unistd.Plo  vasnprintf.Plo  xsize.Plo
lib/glthread/: lock.lo  threadlib.lo
lib/glthread/.deps/: lock.Plo  threadlib.Plo
lib/sys/: stat.h  times.h
src/: Makefile.am
src/pins-lib/: pins-impl.h
src/pins2delta/: Makefile.am  pins2jni.c  pins2jni.h  wrapper.c
src/pins2lts-seq/: Makefile.am  pins2jni.c
src/tests/: wine-wrapper.sh
testsuite/: wine.exp
